Fix image file name

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  background: url('/portfolio/_MG_6490.jpg') no-repeat center fixed;
+  background: url('/portfolio/IMG_6490.jpg') no-repeat center fixed;
   background-size: cover;
 }
 
