Add flex to bar button

--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,13 @@ code {
 }
 
 .bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: #f6f6f6;
   border-radius: 0.5em;
+  text-align: center;
   height: 4em;
   padding: 1.5em;
   background-color: rgba(0.3, 0.3, 0.3, 0.5);
